--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="emoji-container">🎉😆🎊🔥💥</div>
+  <div class="emoji-container">🎉🔥😆💥🎊</div>
 
   <div class="container">
     <h1 id="question">承認欲求を受け取りますか？</h1>
@@ -18,10 +18,10 @@
     <div id="result"></div>
   </div>
 
-  <div class="fireworks"></div>
+  <!-- スクロールテキスト（やったぁ‼️‼️が流れる） -->
   <div class="scroll-text">やったぁ‼️‼️ やったぁ‼️‼️ やったぁ‼️‼️ やったぁ‼️‼️</div>
 
-  <!-- ヤバい‼️量産エリア -->
+  <!-- ヤバい‼️が増殖するエリア -->
   <div id="yabai-container"></div>
 
   <script src="script.js"></script>
