--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="emoji-container">🎉🔥😆💥🎊</div>
+  <div class="emoji-container">🎉😆🎊</div>
 
   <div class="container">
     <h1 id="question">承認欲求を受け取りますか？</h1>
